initial website build

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,17 +4,13 @@
 		<div class="row  vertical-align">
 			<div class="col-md-6 address">
 				<p>This page created and maintained by:</p>
-				<p>Rebecca Pollet</p>
-				<p>Ada Hagan</p>
+				<p>Ada K. Hagan, Ph.D.</p>
 				<p></p>
-				<p>
-				  <a href="https://github.com/diversifymicrobiology/DiversifyMicrobiology.github.io">Make your own Diversify
-				  </a>
-				  </p>
+
 			</div>
 			<div class="col-md-6">
 				<div class="copy pull-right">
-					<p>DiversifyMicro &copy {{ site.time | date: '%Y' }}</p>
+					<p>Ada K. Hagan, Ph.D. &copy {{ site.time | date: '%Y' }}</p>
 					<p>
 						<a href="mailto:{{ site.email }}">
 							<i class="far fa-envelope fa-lg" style="color:white"></i>
