--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,9 +6,10 @@
 				{% if page.category != "home" %}
 				<li role="presentation" ><a href="{{site.baseurl}}/">Home</a></li>
 				{% endif %}
-				<li role="presentation" {% if page.category == "list" %}class="active"{% endif %}><a href="{{  site.baseurl  }}/list">DiversifyMicro List</a></li>
-				<li role="presentation" {% if page.category == "nominate" %}class="active"{% endif %}><a href="{{ site.baseurl }}/nominate">Self-Nomination</a></li>
-				<li role="presentation" {% if page.category == "resources" %}class="active"{% endif %}><a href="{{ site.baseurl }}/resources">Resources</a></li>
+				<li role="presentation" {% if page.category == "dei" %}class="active"{% endif %}><a href="{{  site.baseurl  }}/dei">DEI</a></li>
+				<li role="presentation" {% if page.category == "outreach" %}class="active"{% endif %}><a href="{{ site.baseurl }}/outreach">Outreach</a></li>
+				<li role="presentation" {% if page.category == "research" %}class="active"{% endif %}><a href="{{ site.baseurl }}/research">Research</a></li>
+				<li role="presentation" {% if page.category == "education" %}class="active"{% endif %}><a href="{{ site.baseurl }}/education">Education</a></li>
 			</ul>
 		</div>
 	</div>
